# CoffeeMachine

./: .gitignore  CMakeLists.txt  README.md  coffee_app.cc  coffee_app.h  images.qrc  main.cc
qml/: MenuScreen.qml  SettingsScreen.qml  StandbyScreen.qml  StatesScreen.qml  WindowManager.qml  main.qml  qml.qrc
